--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,19 @@
     max-width: 700px;
     margin-bottom: 20px;
     gap: 15px;
+    overflow: hidden;
+  }
+
+  @media (max-width: 500px) {
+    .countdown-container {
+      transform: scale(0.8);
+    }
+  }
+
+  @media (max-width: 300px) {
+    .countdown-container {
+      transform: scale(0.6);
+    }
   }
   
   .countdown-box {
@@ -78,8 +91,8 @@
     padding: 20px;
     border-radius: 50%;
     box-shadow:#ff00ff80 0px 0px 15px;
-    width: 100px;
-    height: 100px;
+    width: 6em;
+    height: 6em;
   }
   
   .countdown-box span {
